WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37094
[V8] SerializedScriptValue value doesn't follow the spec for DOM objects and files
https://bugs.webkit.org/show_bug.cgi?id=37094
Summary
[V8] SerializedScriptValue value doesn't follow the spec for DOM objects and ...
Vitaly Repeshko
Reported
2010-04-05 09:38:12 PDT
Currently, SerializedScriptValue treats DOM objects and files as JS objects.
Attachments
file types support patch v1
(7.87 KB, patch)
2010-04-08 18:10 PDT
,
Vitaly Repeshko
no flags
Details
Formatted Diff
Diff
file types support patch v1.1: fixed style issue
(7.86 KB, patch)
2010-04-08 18:27 PDT
,
Vitaly Repeshko
fishd
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vitaly Repeshko
Comment 1
2010-04-08 18:10:19 PDT
Created
attachment 52927
[details]
file types support patch v1
WebKit Review Bot
Comment 2
2010-04-08 18:15:05 PDT
Attachment 52927
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/bindings/v8/SerializedScriptValue.cpp:203: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Vitaly Repeshko
Comment 3
2010-04-08 18:27:36 PDT
Created
attachment 52929
[details]
file types support patch v1.1: fixed style issue
Darin Fisher (:fishd, Google)
Comment 4
2010-04-08 19:46:40 PDT
Comment on
attachment 52929
[details]
file types support patch v1.1: fixed style issue R=me
Vitaly Repeshko
Comment 5
2010-04-09 16:30:29 PDT
M WebCore/ChangeLog M WebCore/bindings/v8/SerializedScriptValue.cpp Committed
r57382
File types are done. Now we only need to reject DOM wrappers.
Eric Seidel (no email)
Comment 6
2010-04-18 16:28:54 PDT
Attachment 52929
[details]
was posted by a committer and has review+, assigning to Vitaly Repeshko for commit.
Eric Seidel (no email)
Comment 7
2010-05-17 00:37:12 PDT
Closing since this was landed.
Eric Seidel (no email)
Comment 8
2010-05-17 00:37:28 PDT
Please open a new bug for any additional changes.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug